[package]
name = "pkarr-rusttls-certs-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
pkarr = {version="3.7.1", features=["full"]}
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.0"
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ed25519-dalek = "2.1.0"
