[package]
name = "pubky-tls-proxy"
version = "0.1.0-rc.0"
edition = "2021"

[dependencies]
pkarr = {version="3.7.1", features=["full"]}
tokio = { version = "1.44.2", features = ["full"] }
tokio-rustls = "0.26.0"
anyhow = "1.0.86"
clap = { version = "4.5.8", features = ["derive"] }
hex = "0.4.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ed25519-dalek = "2.1.0"

[dev-dependencies]
reqwest = { version = "0.12.5", features = ["rustls-tls-native-roots"], default-features = false }
portpicker = "0.1.1"
once_cell = "1.19.0"
